update all translations from transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ast.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ast.properties
@@ -33,6 +33,12 @@ da = Dan\u00e9s
 
 de = Alem\u00e1n
 
+de-DE = Alem\u00e1n (Alema\u00f1a)
+
+de-AT = Alem\u00e1n austriacu
+
+de-CH = Alem\u00e1n suizu
+
 desc_comma_whitespace = Espaciu enantes de coma y enantes/depu\u00e9s de par\u00e9ntesis
 
 desc_double_punct = Usu de dos puntos o comes sigu\u00edos
@@ -47,7 +53,7 @@ desc_repetition_beginning_word = Tres frases sigu\u00edes entamen cola mesma pal
 
 desc_repetition_beginning_adv = Dos frases sigu\u00edes entamen col mesmu alverbiu.
 
-desc_repetition_beginning_thesaurus = Reescribi la frase o usa'l diccionariu (men\u00fa Ferramientes > Llingua) p'atopar un sin\u00f3nimu.
+desc_repetition_beginning_thesaurus = Reescribi la frase o usa un diccionariu p'atopar un sin\u00f3nimu.
 
 desc_unpaired_brackets = Par\u00e9ntesis, comines, esclamaciones, interrogaciones y asemeyaos despareyaos
 
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Comprueba qu'una frase entame con may\u00fascules
 
 desc_whitespacerepetition = Repetici\u00f3n d'espacios
 
+desc_spelling = Posible fallu d'ortograf\u00eda
+
+desc_spelling_short = Fallu d'ortograf\u00eda
+
 double_dots_short = Dos puntos sigu\u00edos
 
 double_commas_short = Dos comes sigu\u00edes
 
+el = Griegu
+
 en = Ingl\u00e9s
+
+en-AU = Ingl\u00e9s australianu
+
+en-GB = Ingl\u00e9s brit\u00e1nicu
+
+en-US = Ingl\u00e9s americanu
+
+en-CA = Ingl\u00e9s canadianu
+
+en-NZ = Ingl\u00e9s (Nueva Zelanda)
+
+en-ZA = Ingl\u00e9s sudafricanu
 
 enterText = Por favor, escribi o apega'l testu pa comprobar nel cuadru d'enriba
 
@@ -75,7 +99,7 @@ es = Castellanu
 
 false_friend = Amigu falsu
 
-false_friend_desc = pista p'amigu falsu\:
+false_friend_desc = pista p'amigu falsu pa\:
 
 false_friend_hint = Pista\: "{0}" ({1}) significa {2} ({3}).
 
@@ -116,7 +140,7 @@ guiMenuOptions = Opcione&s...
 
 guiMenuQuit = C&olar
 
-guiMenuShowMainWindow = Abrir ventana principal
+guiMenuShowMainWindow = Abrir la ventana principal
 
 guiMotherTongue = La to llingua materna\:
 
@@ -143,7 +167,7 @@ guiReplaceWindowTitle = Trocar testu
 
 guiReplaceWithOtherText = <otru testu>
 
-guiRunOnPort = Executar como sirvidor en pue&rtu
+guiRunOnPort = Executar como sirvidor nel pue&rtu
 
 guiSelectionCheckComplete = Complet\u00f3se la comprobaci\u00f3n del testu seleicion\u00e1u en LanguageTool.
 
@@ -179,7 +203,7 @@ result1 = <br><b> {0}. Llinia {1}, columna {2}</b><br>
 
 resultAreaText = Los resultaos van apaecer equ\u00ed
 
-resultTime = <br>Tiempu\: {0}ms (incluyendo {1}ms de la coincidencia de regles)<br>
+resultTime = <br>Tiempu\: {0}ms (incluyendo {1}ms pa la coincidencia de regles)<br>
 
 ru = Rusu
 
@@ -188,6 +212,8 @@ sk = Eslovacu
 sl = Eslovenu
 
 space_after_comma = Pon un espaciu depu\u00e9s de la coma, pero non enantes
+
+spelling = Atop\u00e1u un posible fallu d'ortograf\u00eda
 
 startChecking = Entamu de la comprobaci\u00f3n en {0}
 
@@ -201,12 +227,26 @@ two_commas = Dos comes sigu\u00edes
 
 two_dots = Dos puntos sigu\u00edos
 
-uk = Ucranianu
+uk = Ucra\u00edn
 
 unpaired_brackets = Par\u00e9ntesis o s\u00edmbolu asemey\u00e1u desparey\u00e1u
+
+useGUIConfig = Usar los par\u00e1metros de m\u00e1s enriba pal sirvidor
 
 whitespace_repetition = Posible error\: repitisti un espaciu
 
 ro = Rumanu
 
 zh = Chinu
+
+moreInfo = M\u00e1s informaci\u00f3n\:
+
+pt = Portugu\u00e9s
+
+pt-BR = Portugu\u00e9s (Brasil)
+
+pt-PT = Portugu\u00e9s (Portugal)
+
+guiWarning = Avisu
+
+guiDuplicate = \u00a1Ficheru de regles duplic\u00e1u\!
