--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
@@ -33,6 +33,12 @@ da = Daneg
 
 de = Alamaneg
 
+de-DE = Alamaneg (Alamagn)
+
+de-AT = Alamaneg (Aostria)
+
+de-CH = Alamaneg (Suis)
+
 desc_comma_whitespace = Esaouenn dirak \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb pe goude \u00ab\u00a0(\u00a0\u00bb
 
 desc_double_punct = Meur a skej pe bik diouzh renk
@@ -41,25 +47,43 @@ desc_repetition = Ger doublet (\u00ab\u00a0evit evit\u00a0\u00bb, \u00ab\u00a0me
 
 desc_repetition_short = Ger doublet
 
-# desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = Frazenno\u00f9 diouzh renk o kregi\u00f1 gant an hevelep ger
 
-# desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Teir frazenn diouzh renk a grog gant an hevelep ger.
 
-# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = Div frazenn diouzh renk a grog gant an hevelep adverb.
 
-# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition_beginning_thesaurus = Adfrazenni\u00f1 an trao\u00f9 pe ober gant un tezorus evit kavout ur ger he\u00f1velster.
 
-desc_unpaired_brackets = Mankout a ra ur grommell, ur c'hroched, pe un arouezenn damhe\u00f1vel
+desc_unpaired_brackets = Mankout a ra ur grommell, ur c'hloched, pe un arouezenn damhe\u00f1vel
 
 desc_uppercase_sentence = Pennlizherenn e dero\u00f9 ur frazenn
 
 desc_whitespacerepetition = Meur a esaouenn wenn (furmad fall)
 
+desc_spelling = Ur fazi reizhskriva\u00f1 a c'hall beza\u00f1
+
+desc_spelling_short = Fazi reizhskriva\u00f1
+
 double_dots_short = Daou bik diouzh renk
 
 double_commas_short = Daou skej diouzh renk
 
+el = Gresianeg
+
 en = Saozneg
+
+en-AU = Saozneg (Aostralia)
+
+en-GB = Saozneg (Bro-Saoz)
+
+en-US = Saozneg (Stado\u00f9-Unanet)
+
+en-CA = Saozneg (Kanada)
+
+en-NZ = Saozneg (Zeland-Nevez)
+
+en-ZA = Saozneg (Suafrika)
 
 enterText = Lakait an destenn da veza\u00f1 gwiriet en takad a-us
 
@@ -93,7 +117,7 @@ guiCloseButton=Serri\u00f1
 
 guiConfigWindowTitle = Dibarzhio\u00f9 LanguageTool
 
-guiDemoText = An tamm testenn-ma\u00f1 zo ur skouer evit diskouez deoc'h penaos ez a LanguageTool en-dro. Notit mat ne bled ket LanguageTool gant ar reizhskriva\u00f1.
+guiDemoText = An tamm testenn-ma\u00f1 zo ur skouer evit diskouez deoc'h penaos ez a LanguageTool en-dro.
 guiLanguageManagerDialog=Merour modulenn ar yezho\u00f9
 
 guiMatchCount = Fazio\u00f9 posupl \:
@@ -189,6 +213,8 @@ sl = Sloveneg
 
 space_after_comma = Lakait an esaouenn war-lerc'h ar skej ha neket diraza\u00f1
 
+spelling = Evit doare ez eus bet kavet ur fazi reizhskriva\u00f1
+
 startChecking = O kregi\u00f1 da wiria\u00f1 a-benn {0}
 
 sv = Svedeg
@@ -203,10 +229,24 @@ two_dots = Daou bik diouzh renk
 
 uk = Ukraineg
 
-unpaired_brackets = Mankout a ra ur grommell serr pe digor, ur c'hroched serr pe digor, h.a.
+unpaired_brackets = Mankout a ra ur grommell serr pe digor, ur c'hloched serr pe digor, h.a.
+
+useGUIConfig = Lakaat an arventenno\u00f9 a-us da dalvezout evit ar servijer
 
 whitespace_repetition = Ur fazi bizskriva\u00f1 zo evit doare \: lakaet ez eus bet div esaouenn ganeoc'h
 
 ro = Roumaneg
 
 zh = Sinaeg
+
+moreInfo = Muioc\u2019h a ditouro\u00f9 \:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
