--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
@@ -33,6 +33,12 @@ da = D\u00e1nsky
 
 de = N\u011bmecky
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Pou\u017eit\u00ed mezery p\u0159ed \u010d\u00e1rkou a p\u0159ed/za z\u00e1vorkami
 
 desc_double_punct = Pou\u017eit\u00ed dvou za sebou jdouc\u00edch \u010d\u00e1rek nebo te\u010dek
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Zkontroluje zda v\u011bta za\u010d\u00edn\u00e1 velk\u
 
 desc_whitespacerepetition = Opakov\u00e1n\u00ed mezery(\u0161patn\u00e9 form\u00e1tov\u00e1n\u00ed)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Dv\u011b za sebou jdouc\u00ed te\u010dky
 
 double_commas_short = Dv\u011b za sebou jdouc\u00ed \u010d\u00e1rky
 
+# el = Greek
+
 en = Anglicky
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Pros\u00edm zadejte nebo vlo\u017ete text, kter\u00fd chcete zkontrolovat, do vrchn\u00ed oblasti
 
@@ -189,6 +213,8 @@ sl = Slovinsky
 
 space_after_comma = Vlo\u017eit mezeru za \u010d\u00e1rku, ale ne p\u0159ed \u010d\u00e1rku
 
+# spelling = Possible spelling mistake found
+
 startChecking = Za\u010d\u00e1tek kontroly v {0}
 
 sv = \u0160v\u00e9dsky
@@ -205,8 +231,22 @@ uk = Ukrajinsky
 
 unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1vorky nebo podobn\u00fd symbol
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Mo\u017en\u00fd p\u0159eklep\: zopakovali jste mezeru
 
 ro = Rumunsky
 
 # zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
