--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
@@ -33,6 +33,12 @@ da = Dansk
 
 de = Tysk
 
+de-DE = Tysk (Tyskland)
+
+de-AT = Tysk (\u00d8strig)
+
+de-CH = Tysk (Schweiz)
+
 desc_comma_whitespace = Mellemrum f\u00f8r komma og f\u00f8r/efter parenteser
 
 desc_double_punct = To p\u00e5 hinanden f\u00f8lgende punktummer eller kommaer
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Kontroller at s\u00e6tningen starter med et stort begy
 
 desc_whitespacerepetition = Gentagende mellemrum (d\u00e5rlig formatering)
 
+desc_spelling = Mulig stavefejl
+
+desc_spelling_short = Stavefejl
+
 double_dots_short = To p\u00e5 hinanden f\u00f8lgende punktummer
 
 double_commas_short = To p\u00e5 hinanden f\u00f8lgende kommaer
 
+el = Gr\u00e6sk
+
 en = Engelsk
+
+en-AU = Engelsk (Australien)
+
+en-GB = Engelsk (England)
+
+en-US = Engelsk (USA)
+
+en-CA = Engelsk (Canada)
+
+en-NZ = Engelsk (New Zealand)
+
+en-ZA = Engelsk (Sydafrika)
 
 enterText = Indtast eller inds\u00e6t teksten der skal kontrolleres i det \u00f8verste felt
 
@@ -189,6 +213,8 @@ sl = Slovensk
 
 space_after_comma = Inds\u00e6t et mellemrum efter kommaet, ikke f\u00f8r det.
 
+spelling = Mulig stavefejl fundet
+
 startChecking = Starter kontrollen om {0}
 
 sv = Svensk
@@ -205,8 +231,22 @@ uk = Ukrainsk
 
 unpaired_brackets = Ikke parret parenteser eller lignende symboler
 
+useGUIConfig = Brug ovenst\u00e5ende indstillinger til serveren
+
 whitespace_repetition = Mulig sl\u00e5fejl\: du har gentaget et mellemrum
 
 ro = Rum\u00e6nsk
 
 zh = Kinesisk
+
+moreInfo = Mere information\:
+
+pt = Portugisisk
+
+pt-BR = Portugisisk (Brasilien)
+
+pt-PT = Portugisisk (Portugal)
+
+guiWarning = Advarsel
+
+# guiDuplicate = Duplicate rule file\!
