--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -33,6 +33,12 @@ da = D\u00e4nisch
 
 de = Deutsch
 
+de-DE = Deutsch (Deutschland)
+
+de-AT = Deutsch (\u00d6sterreich)
+
+de-CH = Deutsch (Schweiz)
+
 desc_comma_whitespace = Leerzeichen vor/hinter Kommas und Klammern
 
 desc_double_punct = Zwei aufeinanderfolgende Kommas oder Punkte
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Gro\u00dfschreibung am Satzanfang
 
 desc_whitespacerepetition = Wiederholung von Leerzeichen
 
+desc_spelling = M\u00f6glicher Rechtschreibfehler
+
+desc_spelling_short = Rechtschreibfehler
+
 double_dots_short = Zwei aufeinanderfolgende Punkte
 
 double_commas_short = Zwei aufeinanderfolgende Kommas
 
+el = Griechisch
+
 en = Englisch
+
+en-AU = Englisch (Australien)
+
+en-GB = Englisch (Gro\u00dfbritannien)
+
+en-US = Englisch (US)
+
+en-CA = Englisch (Kanada)
+
+en-NZ = Englisch (Neuseeland)
+
+en-ZA = Englisch (S\u00fcdafrika)
 
 enterText = Bitte Text ins obere Feld eintippen oder hineinkopieren
 
@@ -189,6 +213,8 @@ sl = Slowenisch
 
 space_after_comma = Nur hinter einem Komma steht ein Leerzeichen, aber nicht davor.
 
+spelling = M\u00f6glicher Rechtschreibfehler gefunden
+
 startChecking = Beginne Pr\u00fcfung in {0}
 
 sv = Schwedisch
@@ -203,10 +229,24 @@ two_dots = Zwei aufeinander folgende Punkte.
 
 uk = Ukrainisch
 
-unpaired_brackets = Es fehlt eine Klammer usw.
+unpaired_brackets = Es fehlt eine Klammer o.\u00e4.
+
+useGUIConfig = Obige Einstellungen auch f\u00fcr den Server benutzen
 
 whitespace_repetition = M\u00f6glicher Tippfehler\: mehr als ein Leerzeichen hintereinander
 
 ro = Rum\u00e4nisch
 
 zh = Chinesisch
+
+moreInfo = Mehr Informationen\:
+
+pt = Portugiesisch
+
+pt-BR = Portugiesisch (Brasilien)
+
+pt-PT = Portugiesisch (Portugal)
+
+guiWarning = Warnung
+
+guiDuplicate = Doppelte Regel-Datei\!
