--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
@@ -33,6 +33,12 @@ da = Dana
 
 de = Germana
 
+de-DE = Germana (Germanio)
+
+de-AT = Germana (A\u016dstrio)
+
+de-CH = Germana (Svislando)
+
 desc_comma_whitespace = Uzo de spaceto anta\u016d komo kaj anta\u016d/malanta\u016d krampoj
 
 desc_double_punct = Uzo de sinsekvaj punktoj a\u016d komoj
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Kontrolas, \u0109u frazo komenci\u011das per majuskla 
 
 desc_whitespacerepetition = Ripetita spaceto (ne\u011dusta formato)
 
+desc_spelling = Ebla mistajpa\u0135o
+
+desc_spelling_short = Mistajpa\u0135o
+
 double_dots_short = Du sinsekvaj punktoj
 
 double_commas_short = Du sinsekvaj komoj
 
+el = Greka
+
 en = Angla
+
+en-AU = Angla (A\u016dtralio)
+
+en-GB = Angla (Britio)
+
+en-US = Angla (Usono)
+
+en-CA = Angla (Kanado)
+
+en-NZ = Angla (Nov-Zelando)
+
+en-ZA = Angla (Sud-Afriko)
 
 enterText = Bonvolu tajpi a\u016d alglui kontrolendan tekston en la supra kampo
 
@@ -189,6 +213,8 @@ sl = Slovena
 
 space_after_comma = Enmeti spaceton post la komo, sed ne anta\u016d la komo
 
+spelling = Ebla mistajpa\u0135o trovita
+
 startChecking = Ekkontroli en {0}
 
 sv = Sveda
@@ -205,8 +231,22 @@ uk = Ukraina
 
 unpaired_brackets = Nekongruaj krampoj a\u016d similaj simbolo
 
+useGUIConfig = Uzi la suprajn agordarojn por la servilo
+
 whitespace_repetition = Ebla mistajpa\u0135o\: vi ripetis spaceton
 
 ro = Rumana
 
 zh = \u0108ina
+
+moreInfo = Pliaj informoj \:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
