--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
@@ -1,15 +1,15 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = Detectar el idioma autom\u00e1ticamente
 
-ast = Asturiano
+ast = asturiano
 
-be = Bielorruso
+be = bielorruso
 
-br = Breton
+br = bret\u00f3n
 
-ca = Catal\u00e1n
+ca = catal\u00e1n
 
 category_case = May\u00fasculas y min\u00fasculas
 
@@ -33,6 +33,12 @@ da = dan\u00e9s
 
 de = alem\u00e1n
 
+de-DE = alem\u00e1n (Alemania)
+
+de-AT = alem\u00e1n (austriaco)
+
+de-CH = alem\u00e1n (suizo)
+
 desc_comma_whitespace = Espacios en blanco antes de coma y antes/despu\u00e9s de parent\u00e9sis
 
 desc_double_punct = Dos puntos o comas consecutivos
@@ -41,13 +47,13 @@ desc_repetition = Repetici\u00f3n de una palabra (p. ej. 'soy soy')
 
 desc_repetition_short = Repetici\u00f3n de una palabra
 
-# desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = Dos frases consecutivas comienzan con la misma palabra.
 
-# desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Tres frases consecutivas comienzan con la misma palabra.
 
-# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = Dos frases consecutivas comienzan con el mismo adverbio.
 
-# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition_beginning_thesaurus = Reescriba la frase o use un diccionario para encontrar un sin\u00f3nimo.
 
 desc_unpaired_brackets = Par\u00e9ntesis, comillas, signos de exclamaci\u00f3n, interrogaci\u00f3n y similares desparejados
 
@@ -55,17 +61,35 @@ desc_uppercase_sentence = Comprobar si la frase se inicia con una letra may\u00f
 
 desc_whitespacerepetition = M\u00faltiples espacios en blanco
 
+desc_spelling = Posible error de ortograf\u00eda
+
+desc_spelling_short = Error de ortograf\u00eda
+
 double_dots_short = Dos puntos consecutivos
 
 double_commas_short = Dos comas consecutivas
 
+el = griego
+
 en = ingl\u00e9s
+
+en-AU = ingl\u00e9s (australiano)
+
+en-GB = ingl\u00e9s (brit\u00e1nico)
+
+en-US = ingl\u00e9s (americano)
+
+en-CA = ingl\u00e9s (canadiense)
+
+en-NZ = ingl\u00e9s (Nueva Zelanda)
+
+en-ZA = ingl\u00e9s (sudafricano)
 
 enterText = Escriba o pegue el texto a revisar en el cuadro superior
 
 enterText2 = Escriba o pegue el texto a revisar aqu\u00ed
 
-eo = Esperanto
+eo = esperanto
 
 errorContext = Contexto\:
 
@@ -79,44 +103,44 @@ false_friend_desc = Nota para falso amigo\:
 
 false_friend_hint = Nota\: "{0}" ({1}) significa {2} ({3}).
 
-false_friend_suggestion = \u00bfQuiere decir {0}?
+false_friend_suggestion = \u00bfQuiso decir {0}?
 
 fr = franc\u00e9s
 
 gl = gallego
 
-guiAddButton=Add...
+guiAddButton=A\u00f1adir...
 guiCancelButton = Cancelar
 
 guiCheckComplete = Se ha completado la revisi\u00f3n de LanguageTool.
-guiCloseButton=Close
+guiCloseButton=Cerrar
 
 guiConfigWindowTitle = LanguageTool - Opciones
 
-guiDemoText = Ese es un un ejemplo del texto que mostra como funcciona LanguageTool. Ese programma no incluieee ninguna revisi\u00f3n ortogr\u00e1fica\\\!
-guiLanguageManagerDialog=Language Module Manager
+guiDemoText = Este es un un ejemplo de texto de entrada para mostrar como funciona LanguageTool. 
+guiLanguageManagerDialog=Administrador de M\u00f3dulos de Idioma
 
 guiMatchCount = Posibles errores\:
 
-guiMenuAbout = Acerca de...
+guiMenuAbout = &Acerca de...
 
-guiMenuAddRules = Cargar fichero de reglas
+guiMenuAddRules = Cargar fichero de &reglas
 
-guiMenuCheckClipboard = Revisar el texto del portapapeles
+guiMenuCheckClipboard = &Revisar el texto del portapapeles
 
-guiMenuFile = Archivo
+guiMenuFile = &Archivo
 
-guiMenuHelp = Ayuda
+guiMenuHelp = A&yuda
 
 guiMenuHide = Minimizar a la bandeja del sistema
 
-guiMenuOpen = Abrir...
+guiMenuOpen = A&brir...
 
-guiMenuOptions = Opciones...
+guiMenuOptions = Opcione&s...
 
-guiMenuQuit = Terminar
+guiMenuQuit = &Terminar
 
-guiMenuShowMainWindow = Abrir ventana principal
+guiMenuShowMainWindow = Abrir la ventana principal
 
 guiMotherTongue = Idioma nativo\:
 
@@ -124,11 +148,11 @@ guiNoErrorsFound = No se han encontrado errores ni advertencias (idioma\: {0})
 
 guiNoErrorsFoundSelectedText = No se han encontrado errores ni advertencias en el texto seleccionado (idioma\: {0})
 
-guiOKButton = Aceptar
+guiOKButton = &Aceptar
 
-guiOOoChangeButton = Cambiar
+guiOOoChangeButton = &Cambiar
 
-guiOOoCloseButton = Cerrar
+guiOOoCloseButton = C&errar
 
 guiOOoIgnoreAllButton = Ignorar siempre
 
@@ -136,18 +160,18 @@ guiOOoIgnoreButton = Ignorar
 
 guiOOoOptionsButton = Opciones...
 
-guiProgressWindowTitle = LanguageTool\: Comprobaci\u00f3n del texto...
+guiProgressWindowTitle = LanguageTool\: Comprobao el texto...
 
-guiRemoveButton=Remove
+guiRemoveButton=Eliminar
 guiReplaceWindowTitle = Sustituir texto
 
 guiReplaceWithOtherText = <otro texto>
 
-guiRunOnPort = Ejecutar como servidor en puerto
+guiRunOnPort = Ejecutar como servidor en el pue&rto
 
 guiSelectionCheckComplete = Se ha completado la verificaci\u00f3n del texto seleccionado en LanguageTool.
 
-guiTagText = &Tag Text
+guiTagText = &Etiquetar texto
 
 incorrect_case = Esa frase no se inicia con may\u00fascula
 
@@ -155,13 +179,13 @@ is = island\u00e9s
 
 it = italiano
 
-km = Khmer
+km = khmer
 
 lt = lituano
 
 missing_space_after_comma = Deja un espacio despu\u00e9s de coma
 
-ml = Malayo
+ml = malayo
 
 nl = holand\u00e9s
 
@@ -175,11 +199,11 @@ pl = polaco
 
 repetition = Posible error tipogr\u00e1fico\: repetici\u00f3n de una palabra
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. L\u00ednea {1}, columna {2}</b><br>
 
 resultAreaText = Los resultados aparecer\u00e1n aqu\u00ed.
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Tiempo\: {0}ms (incluyendo {1}ms para la concordancia de reglas)<br>
 
 ru = ruso
 
@@ -187,13 +211,15 @@ sk = eslovaco
 
 sl = esloveno
 
-space_after_comma = Se deja un espacio despu\u00e9s de coma y nunca antes del signo ortogr\u00e1fico.
+space_after_comma = Se deja un espacio despu\u00e9s de coma y nunca antes del signo ortogr\u00e1fico
+
+spelling = Hallado un posible error de ortograf\u00eda
 
 startChecking = Inicio de verificaci\u00f3n en {0}
 
 sv = sueco
 
-tl = Tagalog
+tl = tagalog
 
 textLanguage = Idioma del texto\:
 
@@ -205,8 +231,22 @@ uk = ucraniano
 
 unpaired_brackets = Se ha encontrado un error en los par\u00e9ntesis, comillas, signos de exclamaci\u00f3n o interrogaci\u00f3n
 
+useGUIConfig = Usar los par\u00e1metros anteriores para el servidor
+
 whitespace_repetition = Posible error tipogr\u00e1fico\: m\u00faltiples espacios en blanco
 
 ro = rumano
 
-zh = Chinese
+zh = chino
+
+moreInfo = M\u00e1s informaci\u00f3n\:
+
+pt = portugu\u00e9s
+
+pt-BR = portugu\u00e9s (Brasil)
+
+pt-PT = portugu\u00e9s (Portugal)
+
+guiWarning = Aviso
+
+guiDuplicate = \u00a1Archivo de reglas duplicado\!
