--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
@@ -3,13 +3,13 @@
 
 atd = Detecci\u00f3n autom\u00e1tica de idioma
 
-ast = asturiano
+ast = Asturiano
 
-be = bielorruso
+be = Bielorruso
 
-br = bret\u00f3n
+br = Bret\u00f3n
 
-ca = catal\u00e1n
+ca = Catal\u00e1n
 
 category_case = Mai\u00fasculas e min\u00fasculas
 
@@ -27,11 +27,17 @@ checkText = &Comprobar o texto
 
 correctionMessage = Correcci\u00f3n\:
 
-cs = checo
+cs = Checo
 
-da = dan\u00e9s
+da = Dan\u00e9s
 
-de = alem\u00e1n
+de = Alem\u00e1n
+
+de-DE = Alem\u00e1n (Alema\u00f1a)
+
+de-AT = Alem\u00e1n (austr\u00edaco)
+
+de-CH = Alem\u00e1n (su\u00edzo)
 
 desc_comma_whitespace = Uso de espazos en branco diante dunha coma ou antes/despois de par\u00e9ntese
 
@@ -55,23 +61,41 @@ desc_uppercase_sentence = Comproba que unha oraci\u00f3n comece con mai\u00fascu
 
 desc_whitespacerepetition = M\u00faltiples espazos en branco (erro de formato)
 
+desc_spelling = Pos\u00edbel erro ortogr\u00e1fico
+
+desc_spelling_short = Erro ortogr\u00e1fico
+
 double_dots_short = Dous puntos consecutivos
 
 double_commas_short = D\u00faas comas consecutivas
 
-en = ingl\u00e9s
+el = Grego
+
+en = Ingl\u00e9s
+
+en-AU = Ingl\u00e9s (australiano)
+
+en-GB = Ingl\u00e9s (brit\u00e1nico)
+
+en-US = Ingl\u00e9s (estadounidense)
+
+en-CA = Ingl\u00e9s (canadense)
+
+en-NZ = Ingl\u00e9s (neoceland\u00e9s)
+
+en-ZA = Ingl\u00e9s (surafricano)
 
 enterText = Por favor, teclee ou pegue o texto que desexa corrixir na \u00e1rea superior
 
 enterText2 = Por favor, insira aqu\u00ed o texto que desexa corrixir
 
-eo = esperanto
+eo = Esperanto
 
 errorContext = Contexto\:
 
 errorMessage = Mensaxe\:
 
-es = espa\u00f1ol
+es = Espa\u00f1ol
 
 false_friend = Falso amigo
 
@@ -81,9 +105,9 @@ false_friend_hint = Consello\: "{0}" ({1}) significa {2} ({3}).
 
 false_friend_suggestion = Quer\u00eda vostede dicir {0}?
 
-fr = franc\u00e9s
+fr = Franc\u00e9s
 
-gl = galego
+gl = Galego
 
 guiAddButton=Engadir...
 guiCancelButton = Cancelar
@@ -93,7 +117,7 @@ guiCloseButton=Pechar
 
 guiConfigWindowTitle = Opci\u00f3ns de LanguageTool
 
-guiDemoText = Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool. Por\u00e9n, te\u00f1a en conta que non incl\u00fae un corretor de ortografia.
+guiDemoText = Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool.
 guiLanguageManagerDialog=M\u00f3dulo de xesti\u00f3n de regras
 
 guiMatchCount = Erros potenciais\:
@@ -151,19 +175,19 @@ guiTagText = Etiquetar o texto
 
 incorrect_case = Esta oraci\u00f3n non comeza cunha letra mai\u00fascula
 
-is = island\u00e9s
+is = Island\u00e9s
 
-it = italiano
+it = Italiano
 
-km = khmer
+km = Khmer
 
-lt = lituano
+lt = Lituano
 
 missing_space_after_comma = Po\u00f1a un espazo detr\u00e1s da coma
 
-ml = malaiala
+ml = Malaiala
 
-nl = holand\u00e9s
+nl = Neerland\u00e9s
 
 no_space_after = Non debe usar espazos detr\u00e1s dos par\u00e9nteses de apertura
 
@@ -171,7 +195,7 @@ no_space_before = Non debe usar espazos antes dos par\u00e9nteses de peche
 
 no_space_before_dot = Non debe po\u00f1er espazos antes dun punto.
 
-pl = polaco
+pl = Polaco
 
 repetition = Pos\u00edbel erro tipogr\u00e1fico\: repetiu unha palabra
 
@@ -181,19 +205,21 @@ resultAreaText = Os resultados aparecer\u00e1n aqu\u00ed
 
 resultTime = <br>Tempo\: {0}ms (inclu\u00edndo {1}ms na coincidencia de regras)<br>
 
-ru = ruso
+ru = Ruso
 
-sk = eslovaco
+sk = Eslovaco
 
-sl = esloveno
+sl = Esloveno
 
 space_after_comma = Po\u00f1a un espazo en branco despois da coma, pero nunca antes
 
+spelling = Atopouse un pos\u00edbel erro ortogr\u00e1fico
+
 startChecking = Inicio da verificaci\u00f3n en {0}
 
-sv = sueco
+sv = Sueco
 
-tl = tagalo
+tl = Tagalo
 
 textLanguage = Lingua do texto\:
 
@@ -201,12 +227,26 @@ two_commas = D\u00faas comas consecutivas
 
 two_dots = Dous puntos consecutivos
 
-uk = ucra\u00edno
+uk = Ucra\u00edno
 
 unpaired_brackets = Par\u00e9nteses ou s\u00edmbolos similares desemparellados
+
+useGUIConfig = Usar a configuraci\u00f3n de enriba para o servidor
 
 whitespace_repetition = Pos\u00edbel erro tipogr\u00e1fico\: repetiu un espazo en branco
 
 ro = roman\u00e9s
 
-zh = chin\u00e9s
+zh = Chin\u00e9s
+
+moreInfo = M\u00e1is info\:
+
+pt = Portugu\u00e9s
+
+pt-BR = Portugu\u00e9s (Brasil)
+
+pt-PT = Portugu\u00e9s (Portugal)
+
+guiWarning = Atenci\u00f3n
+
+guiDuplicate = Ficheiro de regras duplicado\!
