--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
@@ -33,6 +33,12 @@ da = Danese
 
 de = Tedesco
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Utilizzo dello spazio prima della virgola e prima/dopo le parentesi
 
 desc_double_punct = Doppia battitura di punti o di virgole
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Controlla che la frase inizi con una maiuscola
 
 desc_whitespacerepetition = Ripetizione dello spazio (brutta formattazione)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Due punti consecutivi
 
 double_commas_short = Due virgole consecutive
 
+# el = Greek
+
 en = Inglese
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Si prega di scrivere o di incollare il testo da controllare nel campo in alto
 
@@ -189,6 +213,8 @@ sl = Sloveno
 
 space_after_comma = Inserire lo spazio dopo la virgola e non prima
 
+# spelling = Possible spelling mistake found
+
 startChecking = Inizio controllo a {0}
 
 sv = Svedese
@@ -205,8 +231,22 @@ uk = Ucraino
 
 unpaired_brackets = Non chiusura di parentesi o di simboli simili
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Probabile errore\: ripetizione di spazio
 
 ro = Rumeno
 
 zh = Cinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
