--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
@@ -33,6 +33,12 @@ da = \u178a\u17b6\u178e\u17ba\u1798\u17c9\u17b6\u1780
 
 de = \u17a2\u17b6\u179b\u17d2\u179b\u17ba\u1798\u17c9\u1784\u17cb
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = \u1794\u17b6\u1793\u200b\u1794\u17d2\u179a\u17be\u200b\u1785\u1793\u17d2\u179b\u17c4\u17c7\u200b\u1791\u1791\u17c1\u200b\u1798\u17bb\u1793\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1780\u17d2\u1794\u17c0\u179f\u200b\u200b\u1793\u17b7\u1784\u200b\u200b\u1798\u17bb\u1793\u200b\u17ac\u200b\u1780\u17d2\u179a\u17c4\u1799\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u200b\u179c\u1784\u17cb\u200b\u1780\u17d2\u179a\u1785\u1780
 
 desc_double_punct = \u1794\u17b6\u1793\u200b\u1794\u17d2\u179a\u17be\u200b\u1785\u17c6\u178e\u17bb\u1785\u200b\u17ac\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1780\u17d2\u1794\u17c0\u179f\u200b\u1796\u17b8\u179a\u200b\u1787\u17b6\u1794\u17cb\u1782\u17d2\u1793\u17b6
@@ -55,11 +61,29 @@ desc_unpaired_brackets = \u1798\u17b6\u1793\u200b\u179a\u17c9\u17b6\u178f\u17cb 
 
 # desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 # double_dots_short = Two consecutive dots
 
 # double_commas_short = Two consecutive comma
 
+# el = Greek
+
 en = \u17a2\u1784\u17cb\u1782\u17d2\u179b\u17c1\u179f
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 # enterText = Please type or paste text to check in the top area
 
@@ -93,7 +117,7 @@ guiCancelButton = \u1794\u17c4\u17c7\u1794\u1784\u17cb
 
 # guiConfigWindowTitle = LanguageTool Options
 
-# guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
+# guiDemoText = This is a example input to to show you how LanguageTool works.
 # guiLanguageManagerDialog=Language Module Manager
 
 # guiMatchCount = Potential errors\:
@@ -189,6 +213,8 @@ sl = \u179f\u17d2\u179b\u17bc\u179c\u17c9\u17b6\u1793\u17b8
 
 # space_after_comma = Put a space after the comma, but not before the comma
 
+# spelling = Possible spelling mistake found
+
 # startChecking = Starting check in {0}
 
 sv = \u179f\u17ca\u17bb\u1799\u17a2\u17c2\u178a
@@ -205,8 +231,22 @@ uk = \u17a2\u17ca\u17bb\u1799\u1780\u17d2\u179a\u17c2\u1793
 
 # unpaired_brackets = Unpaired bracket or similar symbol
 
+# useGUIConfig = Use above settings for the server
+
 # whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = \u179a\u17bc\u1798\u17c9\u17b6\u1793\u17b8
 
 # zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
