--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
@@ -33,6 +33,12 @@ da = Dan\u0173
 
 de = vokie\u010di\u0173
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Tarp\u0173 naudojimas prie\u0161/po kablel\u012f bei skliaustelius
 
 desc_double_punct = Ar n\u0117ra dviej\u0173 pasikartojan\u010di\u0173 ta\u0161k\u0173 ar kableli\u0173
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios 
 
 # desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 # double_dots_short = Two consecutive dots
 
 # double_commas_short = Two consecutive comma
 
+# el = Greek
+
 en = angl\u0173
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Tikrinimui skirt\u0105 tekst\u0105 ra\u0161ykite arba \u012fd\u0117kite vir\u0161uje
 
@@ -189,6 +213,8 @@ sk = slovak\u0173
 
 space_after_comma = Tarp\u0105 reikia d\u0117ti po kablelio, o ne prie\u0161 j\u012f
 
+# spelling = Possible spelling mistake found
+
 startChecking = Pradedamas tikrinimas kalbai\: {0}
 
 sv = \u0161ved\u0173
@@ -205,8 +231,22 @@ uk = ukrainie\u010di\u0173
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
+# useGUIConfig = Use above settings for the server
+
 # whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = Rom\u00e2n\u0103
 
 # zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
