--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
@@ -33,6 +33,12 @@ da = Deens
 
 de = Duits
 
+de-DE = Duits (Duitsland)
+
+de-AT = Duits (Oostenrijk)
+
+de-CH = Duits (Zwitserland)
+
 desc_comma_whitespace = Spatie voor of achter haakje
 
 desc_double_punct = Twee komma's of punten
@@ -41,13 +47,13 @@ desc_repetition = Herhaling (bijv. 'de de')
 
 desc_repetition_short = Herhaling
 
-# desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = Twee opeenvolgende zinnen beginnen met hetzelfde woord.
 
-# desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Drie opeenvolgende zinnen beginnen met hetzelfde woord.
 
-# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = Twee opeenvolgende zinnen starten met hetzelfde bijwoord.
 
-# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition_beginning_thesaurus = Herformuleer de zin of zoek een synoniem
 
 desc_unpaired_brackets = Onjuist gecombineerde leestekens
 
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Controleert of een zin begint met een hoofdletter
 
 desc_whitespacerepetition = Te veel witruimte tussen woorden
 
+desc_spelling = Waarschijnlijk een spelfout
+
+desc_spelling_short = Spelling onjuist
+
 double_dots_short = Te veel punten
 
 double_commas_short = Te veel komma's
 
+el = Grieks
+
 en = Engels
+
+en-AU = Engels (Australi\u00eb)
+
+en-GB = Engels (Groot-Brittanni\u00eb)
+
+en-US = Engels (Amerika)
+
+en-CA = Engels (Canada)
+
+en-NZ = Engels (Nieuw-Zeeland)
+
+en-ZA = Engels (Zuid-Afrika)
 
 enterText = Voer in het bovenste vak de te controleren tekst in
 
@@ -189,6 +213,8 @@ sl = Sloveens
 
 space_after_comma = Zet een spatie na een komma, maar niet ervoor
 
+spelling = Mogelijke spelfout gevonden
+
 startChecking = Start controle in {0}
 
 sv = Zweeds
@@ -205,8 +231,22 @@ uk = Oekra\u00efens
 
 unpaired_brackets = Oneven aantal teksthaken
 
+useGUIConfig = Bovenstaande instellingen zijn voor LT als server
+
 whitespace_repetition = Teveel witruimte
 
 ro = Roemeens
 
 zh = Chinees
+
+moreInfo = Meer info\:
+
+pt = Portugees
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
