--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pt.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pt.properties
@@ -1,212 +1,252 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Detecci\u00f3n autom\u00e1tica de idioma
+# atd = Automatically detect language
 
-ast = asturiano
+# ast = Asturian
 
-be = bielorruso
+# be = Belarusian
 
-br = bret\u00f3n
+# br = Breton
 
-ca = catal\u00e1n
+# ca = Catalan
 
-category_case = Mai\u00fasculas e min\u00fasculas
+# category_case = Capitalization
 
-category_false_friend = Falsos amigos
+# category_false_friend = False friends
 
-category_grammar = Gram\u00e1tica
+# category_grammar = Grammar
 
-category_misc = Miscel\u00e1nea
+# category_misc = Miscellaneous
 
-category_typo = Pos\u00edbeis erros tipogr\u00e1ficos
+# category_typo = Possible Typo
 
-checkDone = Comprobaci\u00f3n feita, atop\u00e1ronse {0} problemas potenciais
+# checkDone = Check done, {0} potential problems found
 
-checkText = &Comprobar o texto
+# checkText = &Check Text
 
-correctionMessage = Correcci\u00f3n\:
+# correctionMessage = Correction\:
 
-cs = checo
+# cs = Czech
 
-da = dan\u00e9s
+# da = Danish
 
-de = alem\u00e1n
+# de = German
 
-desc_comma_whitespace = Uso de espazos en branco diante dunha coma ou antes/despois de par\u00e9ntese
+# de-DE = German (Germany)
 
-desc_double_punct = Uso de dous puntos ou comas consecutivos
+# de-AT = German (Austrian)
 
-desc_repetition = Repetici\u00f3n dunha palabra (por exemplo, 'vai vai')
+# de-CH = German (Swiss)
 
-desc_repetition_short = Repetici\u00f3n dunha palabra
+# desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
-desc_repetition_beginning = Varias frases seguidas comezan coa mesma palabra.
+# desc_double_punct = Use of two consecutive dots or commas
 
-desc_repetition_beginning_word = Tres frases seguidas comezan coa mesma palabra.
+# desc_repetition = Word repetition (e.g. 'will will')
 
-desc_repetition_beginning_adv = D\u00faas frases seguidas comezan co mesmo adverbio.
+# desc_repetition_short = Word repetition
 
-desc_repetition_beginning_thesaurus = Refaga a frase ou empregue un tesauro para atopar un sin\u00f3nimo.
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_unpaired_brackets = Par\u00e9nteses, comi\u00f1as e s\u00edmbolos similares desemparellados
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_uppercase_sentence = Comproba que unha oraci\u00f3n comece con mai\u00fascula
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_whitespacerepetition = M\u00faltiples espazos en branco (erro de formato)
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
-double_dots_short = Dous puntos consecutivos
+# desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
 
-double_commas_short = D\u00faas comas consecutivas
+# desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
-en = ingl\u00e9s
+# desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
-enterText = Por favor, teclee ou pegue o texto que desexa corrixir na \u00e1rea superior
+# desc_spelling = Possible spelling mistake
 
-enterText2 = Por favor, insira aqu\u00ed o texto que desexa corrixir
+# desc_spelling_short = Spelling mistake
 
-eo = esperanto
+# double_dots_short = Two consecutive dots
 
-errorContext = Contexto\:
+# double_commas_short = Two consecutive comma
 
-errorMessage = Mensaxe\:
+# el = Greek
 
-es = espa\u00f1ol
+# en = English
 
-false_friend = Falso amigo
+# en-AU = English (Australian)
 
-false_friend_desc = Nota referente aos falsos amigos\:
+# en-GB = English (British)
 
-false_friend_hint = Consello\: "{0}" ({1}) significa {2} ({3}).
+# en-US = English (American)
 
-false_friend_suggestion = Quer\u00eda vostede dicir {0}?
+# en-CA = English (Canadian)
 
-fr = franc\u00e9s
+# en-NZ = English (New Zealand)
 
-gl = galego
+# en-ZA = English (South African)
 
-guiAddButton=Engadir...
-guiCancelButton = Cancelar
+# enterText = Please type or paste text to check in the top area
 
-guiCheckComplete = Completouse a correcci\u00f3n de LanguageTool.
-guiCloseButton=Pechar
+# enterText2 = Please insert text to check here
 
-guiConfigWindowTitle = Opci\u00f3ns de LanguageTool
+# eo = Esperanto
 
-guiDemoText = Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool. Por\u00e9n, te\u00f1a en conta que non incl\u00fae un corretor de ortografia.
-guiLanguageManagerDialog=M\u00f3dulo de xesti\u00f3n de regras
+# errorContext = Context\:
 
-guiMatchCount = Erros potenciais\:
+# errorMessage = Message\:
 
-guiMenuAbout = &Acerca de...
+# es = Spanish
 
-guiMenuAddRules = Cargar ficheiro de &regras
+# false_friend = False friend
 
-guiMenuCheckClipboard = &Corrixir texto do portaretallos
+# false_friend_desc = false friend hint for\:
 
-guiMenuFile = &Ficheiro
+# false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
-guiMenuHelp = A&xuda
+# false_friend_suggestion = Did you mean {0}?
 
-guiMenuHide = &Minimizar \u00e1 bandexa do sistema
+# fr = French
 
-guiMenuOpen = A&brir...
+# gl = Galician
 
-guiMenuOptions = Opci\u00f3n&s...
+# guiAddButton=Add...
+# guiCancelButton = Cancel
 
-guiMenuQuit = Sa\u00ed&r
+# guiCheckComplete = LanguageTool check is complete.
+# guiCloseButton=Close
 
-guiMenuShowMainWindow = Abrir fiestra principal
+# guiConfigWindowTitle = LanguageTool Options
 
-guiMotherTongue = A s\u00faa lingua materna\:
+# guiDemoText = This is a example input to to show you how LanguageTool works.
+# guiLanguageManagerDialog=Language Module Manager
 
-guiNoErrorsFound = Non se atoparon erros nin advertencias (lingua\: {0})
+# guiMatchCount = Potential errors\:
 
-guiNoErrorsFoundSelectedText = Non se atoparon erros ou advertencias no texto seleccionado (lingua\: {0})
+# guiMenuAbout = &About...
 
-guiOKButton = &Aceptar
+# guiMenuAddRules = Load &Rule File
 
-guiOOoChangeButton = &Cambiar
+# guiMenuCheckClipboard = &Check Text in Clipboard
 
-guiOOoCloseButton = Pechar
+# guiMenuFile = &File
 
-guiOOoIgnoreAllButton = Ignorar todos
+# guiMenuHelp = &Help
 
-guiOOoIgnoreButton = Ignorar
+# guiMenuHide = &Hide to System Tray
 
-guiOOoOptionsButton = Opci\u00f3ns...
+# guiMenuOpen = &Open...
 
-guiProgressWindowTitle = LanguageTool\: comprobaci\u00f3n do texto...
+# guiMenuOptions = Option&s...
 
-guiRemoveButton=Eliminar
-guiReplaceWindowTitle = Substitu\u00edr o texto
+# guiMenuQuit = &Quit
 
-guiReplaceWithOtherText = <outro texto>
+# guiMenuShowMainWindow = Open Main Window
 
-guiRunOnPort = Executar como servidor no por&to
+# guiMotherTongue = Your mother tongue\:
 
-guiSelectionCheckComplete = LanguageTool completou a correcci\u00f3n do texto seleccionado.
+# guiNoErrorsFound = No errors or warnings found (language\: {0})
 
-guiTagText = Etiquetar o texto
+# guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
 
-incorrect_case = Esta oraci\u00f3n non comeza cunha letra mai\u00fascula
+# guiOKButton = &OK
 
-is = island\u00e9s
+# guiOOoChangeButton = &Change
 
-it = italiano
+# guiOOoCloseButton = Close
 
-km = khmer
+# guiOOoIgnoreAllButton = Ignore All
 
-lt = lituano
+# guiOOoIgnoreButton = Ignore
 
-missing_space_after_comma = Po\u00f1a un espazo detr\u00e1s da coma
+# guiOOoOptionsButton = Options...
 
-ml = malaiala
+# guiProgressWindowTitle = LanguageTool\: Checking Text...
 
-nl = holand\u00e9s
+# guiRemoveButton=Remove
+# guiReplaceWindowTitle = Replace text
 
-no_space_after = Non debe usar espazos detr\u00e1s dos par\u00e9nteses de apertura
+# guiReplaceWithOtherText = <other text>
 
-no_space_before = Non debe usar espazos antes dos par\u00e9nteses de peche
+# guiRunOnPort = Run as server on po&rt
 
-no_space_before_dot = Non debe po\u00f1er espazos antes dun punto.
+# guiSelectionCheckComplete = LanguageTool check of selected text is complete.
 
-pl = polaco
+# guiTagText = &Tag Text
 
-repetition = Pos\u00edbel erro tipogr\u00e1fico\: repetiu unha palabra
+# incorrect_case = This sentence does not start with an uppercase letter
 
-result1 = <br><b> {0}. Li\u00f1a {1}, columna {2}</b><br>
+# is = Icelandic
 
-resultAreaText = Os resultados aparecer\u00e1n aqu\u00ed
+# it = Italian
 
-resultTime = <br>Tempo\: {0}ms (inclu\u00edndo {1}ms na coincidencia de regras)<br>
+# km = Khmer
 
-ru = ruso
+# lt = Lithuanian
 
-sk = eslovaco
+# missing_space_after_comma = Put a space after the comma
 
-sl = esloveno
+# ml = Malayalam
 
-space_after_comma = Po\u00f1a un espazo en branco despois da coma, pero nunca antes
+# nl = Dutch
 
-startChecking = Inicio da verificaci\u00f3n en {0}
+# no_space_after = Don't put a space after the opening parenthesis
 
-sv = sueco
+# no_space_before = Don't put a space before the closing parenthesis
 
-tl = tagalo
+# no_space_before_dot = Don't put a space before the full stop
 
-textLanguage = Lingua do texto\:
+# pl = Polish
 
-two_commas = D\u00faas comas consecutivas
+# repetition = Possible typo\: you repeated a word
 
-two_dots = Dous puntos consecutivos
+# result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-uk = ucra\u00edno
+# resultAreaText = Results will appear here
 
-unpaired_brackets = Par\u00e9nteses ou s\u00edmbolos similares desemparellados
+# resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-whitespace_repetition = Pos\u00edbel erro tipogr\u00e1fico\: repetiu un espazo en branco
+# ru = Russian
 
-ro = roman\u00e9s
+# sk = Slovak
 
-zh = chin\u00e9s
+# sl = Slovenian
+
+# space_after_comma = Put a space after the comma, but not before the comma
+
+# spelling = Possible spelling mistake found
+
+# startChecking = Starting check in {0}
+
+# sv = Swedish
+
+# tl = Tagalog
+
+# textLanguage = Text Language\:
+
+# two_commas = Two consecutive commas
+
+# two_dots = Two consecutive dots
+
+# uk = Ukrainian
+
+# unpaired_brackets = Unpaired bracket or similar symbol
+
+# useGUIConfig = Use above settings for the server
+
+# whitespace_repetition = Possible typo\: you repeated a whitespace
+
+# ro = Romanian
+
+# zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
