--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
@@ -33,6 +33,12 @@ da = Danez\u0103
 
 de = German\u0103
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Spa\u021bii puse \u00eenainte de virgul\u0103 sau \u00eenainte/dup\u0103 paranteze
 
 desc_double_punct = S-au folosit dou\u0103 puncte sau virgule consecutive
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Verific\u0103 dac\u0103 propozi\u021bia \u00eencepe cu
 
 desc_whitespacerepetition = Spa\u021biu repetat (formatare gre\u0219it\u0103)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Dou\u0103 puncte consecutive
 
 double_commas_short = Dou\u0103 virgule consecutive
 
+# el = Greek
+
 en = Englez\u0103
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = V\u0103 rug\u0103m s\u0103 tasta\u021bi sau s\u0103 lipi\u021bi textul de verificat \u00een zona de sus
 
@@ -189,6 +213,8 @@ sl = Sloven\u0103
 
 space_after_comma = Pune un spa\u021biu dup\u0103 virgul\u0103, dar nu \u00eenainte de virgul\u0103
 
+# spelling = Possible spelling mistake found
+
 startChecking = Verificarea \u00eencepe \u00een {0}
 
 sv = Suedez\u0103
@@ -205,8 +231,22 @@ uk = Ucrainean\u0103
 
 unpaired_brackets = Parantez\u0103 nepereche
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Posibi\u0103 gre\u0219eal\u0103\: a\u021bi repetat un spa\u021biu
 
 ro = Rom\u00e2n\u0103
 
 zh = Chinez\u0103
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
