--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
@@ -33,6 +33,12 @@ da = D\u00e1nsky
 
 de = Nemecky
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Pou\u017eitie medzery pred \u010diarkou a pred/za z\u00e1tvorkami
 
 desc_double_punct = Pou\u017eitie dvoch za sebou id\u00facich bodiek alebo \u010diarok
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Skontrolujte, \u010di veta za\u010d\u00edna ve\u013ek\
 
 desc_whitespacerepetition = Opakovanie "bielych znakov" napr. medzier (zl\u00e9 form\u00e1tovanie)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Dve za sebou id\u00face bodky
 
 double_commas_short = Dve za sebou id\u00face \u010diarky
 
+# el = Greek
+
 en = Anglicky
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Vlo\u017ete alebo nap\u00ed\u0161te text, ktor\u00fd chcete skontrolova\u0165 do hornej \u010dasti
 
@@ -189,6 +213,8 @@ sl = Slovinsky
 
 space_after_comma = Vlo\u017ei\u0165 medzeru za \u010diarku, ale nie pred \u010diarku
 
+# spelling = Possible spelling mistake found
+
 startChecking = Za\u010diatok kontroly po {0}
 
 sv = \u0160v\u00e9dsky
@@ -205,8 +231,22 @@ uk = Ukrajinsky
 
 unpaired_brackets = Nevyp\u00e1rovan\u00e9 z\u00e1tvorky alebo podobn\u00fd symbol
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Mo\u017en\u00fd preklep\: zopakovali ste "biely znak" (whitespace)
 
 ro = Rumunsky
 
 zh = \u010c\u00ednsky
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
