--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
@@ -33,6 +33,12 @@ da = Danska
 
 de = Tyska
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Anv\u00e4ndande av blanksteg f\u00f6re kommatecken eller f\u00f6re/efter parentes
 
 desc_double_punct = Anv\u00e4ndande av dubbla punkter eller kommatecken
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Kontrollera att meningar b\u00f6rjar med stor bokstav
 
 desc_whitespacerepetition = Upprepade mellanslag (d\u00e5lig formateringsvana)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Tv\u00e5 punkter i f\u00f6ljd
 
 double_commas_short = Tv\u00e5 kommatecken i f\u00f6ljd
 
+# el = Greek
+
 en = Engelska
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Skriv eller klistra in text i \u00f6vre f\u00e4ltet
 
@@ -189,6 +213,8 @@ sl = Slovenska
 
 space_after_comma = L\u00e4gg till ett mellanrum efter kommatecknet, men inte f\u00f6re
 
+# spelling = Possible spelling mistake found
+
 startChecking = P\u00e5b\u00f6rjar kontroll om {0}
 
 sv = Svenska
@@ -205,8 +231,22 @@ uk = Ukrainska
 
 unpaired_brackets = Icke ihopparade parenteser eller liknande symboler
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = M\u00f6jlig felskrivning\: du har gjort upprepade mellanslag.
 
 ro = Rom\u00e2n\u0103
 
 # zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
