--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
@@ -33,6 +33,12 @@ da = Danish
 
 de = German
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
 desc_double_punct = Use of two consecutive dots or commas
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
 desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Two consecutive dots
 
 double_commas_short = Two consecutive comma
 
+# el = Greek
+
 en = English
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Please type or paste text to check in the top area
 
@@ -189,6 +213,8 @@ sl = Slovenian
 
 space_after_comma = Put a space after the comma, but not before the comma
 
+# spelling = Possible spelling mistake found
+
 startChecking = Starting check in {0}
 
 sv = Swedish
@@ -205,8 +231,22 @@ uk = Ukrainian
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = Romanian
 
 zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
