--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
@@ -33,6 +33,12 @@ da = \u4e39\u9ea6\u8bed
 
 de = \u5fb7\u8bed
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = \u5728\u9017\u53f7\u524d\u548c\u62ec\u53f7\u524d/\u540e\u4f7f\u7528\u7a7a\u683c
 
 desc_double_punct = \u4f7f\u7528\u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7\u6216\u9017\u53f7
@@ -55,11 +61,29 @@ desc_uppercase_sentence = \u68c0\u67e5\u4e00\u4e2a\u4ee5\u5927\u5199\u5b57\u6bcd
 
 desc_whitespacerepetition = \u7a7a\u683c\u91cd\u590d(\u9519\u8bef\u7684\u683c\u5f0f)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = \u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7
 
 double_commas_short = \u4e24\u4e2a\u8fde\u7eed\u7684\u9017\u53f7
 
+# el = Greek
+
 en = \u82f1\u8bed
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = \u8bf7\u5728\u9876\u90e8\u533a\u57df\u4e2d\u8f93\u5165\u6216\u7c98\u8d34\u6587\u672c\uff0c\u5e76\u68c0\u67e5
 
@@ -189,6 +213,8 @@ sl = \u65af\u7f57\u6587\u5c3c\u4e9a\u8bed
 
 space_after_comma = \u5728\u9017\u53f7\u4e4b\u540e\u7559\u7a7a\u683c\uff0c\u800c\u4e0d\u662f\u5728\u9017\u53f7\u4e4b\u524d
 
+# spelling = Possible spelling mistake found
+
 startChecking = \u5f00\u59cb\u7528{0}\u68c0\u67e5
 
 sv = \u745e\u5178\u8bed
@@ -205,8 +231,22 @@ uk = \u4e4c\u514b\u5170\u8bed
 
 unpaired_brackets = \u4e0d\u6210\u5bf9\u7684\u62ec\u53f7\u6216\u8005\u76f8\u4f3c\u7684\u7b26\u53f7
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = \u53ef\u80fd\u7684\u8f93\u5165\u9519\u8bef\uff1a\u4f60\u91cd\u590d\u4e86\u4e00\u4e2a\u7a7a\u683c
 
 ro = \u7f57\u9a6c\u5c3c\u4e9a\u8bed
 
 zh = \u7b80\u4f53\u4e2d\u6587
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
