--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
@@ -1,17 +1,17 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-# atd = Automatically detect language
+atd = Detecta l'idioma autom\u00e0ticament
 
-# ast = Asturian
+ast = asturi\u00e0
 
-be = Bielor\u00fas
+be = bielor\u00fas
 
-# br = Breton
+br = bret\u00f3
 
-ca = Catal\u00e0
+ca = catal\u00e0
 
-category_case = Maj\u00fascules
+category_case = Maj\u00fascules i min\u00fascules
 
 category_false_friend = Falsos amics
 
@@ -21,57 +21,81 @@ category_misc = Miscel\u00b7l\u00e0nia
 
 category_typo = Possible error tipogr\u00e0fic
 
-checkDone = S'ha realizat la comprovaci\u00f3, i s'han trobat {0} problemes potencials
+checkDone = S'ha fet la comprovaci\u00f3, i s'han trobat {0} possibles problemes
 
 checkText = &Comprova el text
 
 correctionMessage = Correcci\u00f3\:
 
-cs = Txec
+cs = txec
 
-da = Dan\u00e9s
+da = dan\u00e8s
 
-de = Alemany
+de = alemany
 
-desc_comma_whitespace = Espais abants de la coma i abans i despr\u00e9s dels par\u00e8ntesi
+de-DE = alemany (Alemanya)
 
-desc_double_punct = Dos punts o comes consecutives
+de-AT = alemany (austr\u00edac)
 
-desc_repetition = Repetici\u00f3 de paraules (p.ex. 'ma ma')
+de-CH = alemany (su\u00eds)
+
+desc_comma_whitespace = Espais abans de coma i abans i despr\u00e9s dels par\u00e8ntesis
+
+desc_double_punct = Dos punts o dues comes consecutives
+
+desc_repetition = Repetici\u00f3 de paraules (p.ex. 'm\u00e0 m\u00e0')
 
 desc_repetition_short = Repetici\u00f3 de paraules
 
-# desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = Frases successives que comencen amb la mateixa paraula
 
-# desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Tres frases successives que comencen amb la mateixa paraula
 
-# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = Dues frases successives que comencen amb el mateix adverbi
 
-# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition_beginning_thesaurus = Reescriu la frase o usa un diccionari per a trobar un sin\u00f2nim
 
-desc_unpaired_brackets = Claus, cometes, par\u00e8ntesi i simbols semblants desemparellats
+desc_unpaired_brackets = Claus, cometes, par\u00e8ntesis i s\u00edmbols semblants desaparellats
 
-desc_uppercase_sentence = Comprova que una frase comence per maj\u00fascula
+desc_uppercase_sentence = Comproveu que la frase comen\u00e7a amb maj\u00fascula
 
 desc_whitespacerepetition = Repetici\u00f3 d'espais en blanc (formataci\u00f3 incorrecta)
+
+desc_spelling = Possible error ortogr\u00e0fic
+
+desc_spelling_short = Error ortogr\u00e0fic
 
 double_dots_short = Dos punts consecutius
 
 double_commas_short = Dues comes consecutives
 
-en = Angl\u00e8s
+el = grec
 
-enterText = Escriviu o enganxeu el text per comprovar a l'\u00e0rea superior
+en = angl\u00e8s
 
-enterText2 = Inseriu el text per comprovar ac\u00ed
+en-AU = angl\u00e8s (australi\u00e0)
 
-eo = Esperanto
+en-GB = angl\u00e8s (brit\u00e0nic)
 
-# errorContext = Context\:
+en-US = angl\u00e8s (americ\u00e0)
+
+en-CA = angl\u00e8s (canadenc)
+
+en-NZ = angl\u00e8s (neozeland\u00e8s)
+
+en-ZA = angl\u00e8s (sud-afric\u00e0)
+
+enterText = Escriviu o enganxeu el text que cal comprovar a l'\u00e0rea de dalt
+
+enterText2 = Inseriu el text que cal comprovar ac\u00ed
+
+eo = esperanto
+
+errorContext = Context\:
 
 errorMessage = Missatge\:
 
-es = Castell\u00e0
+es = espanyol
 
 false_friend = Fals amic
 
@@ -79,24 +103,24 @@ false_friend_desc = Pista del fals amic per a\:
 
 false_friend_hint = Pista\: "{0}" ({1}) significa {2} ({3}).
 
-false_friend_suggestion = Volies dir {0}?
+false_friend_suggestion = Vol\u00edeu dir {0}?
 
-fr = Franc\u00e8s
+fr = franc\u00e8s
 
-gl = Gallec
+gl = gallec
 
-# guiAddButton=Add...
+guiAddButton=Afegeix...
 guiCancelButton = Cancel\u00b7la
 
-guiCheckComplete = La comprovaci\u00f3 de LanguageTool s'ha completat.
-# guiCloseButton=Close
+guiCheckComplete = S'ha completat la comprovaci\u00f3 de LanguageTool.
+guiCloseButton=Tanca
 
-guiConfigWindowTitle = Opcions del LanguageTool
+guiConfigWindowTitle = Opcions de LanguageTool
 
-guiDemoText = Aquest \u00e9s un exemple d'entrada per a mostrar-vos com funciona LanguageTool. Tingueu en compte, no obstant, que no inclou cap corrector ortogr\u00e0fic.
+guiDemoText = Aquest \u00e9s un exemple d'entrada per a mostrar-vos com funciona LanguageTool.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount = Errors potencials\:
+guiMatchCount = Possibles errors\:
 
 guiMenuAbout = &Quant a...
 
@@ -122,7 +146,7 @@ guiMotherTongue = La vostra llengua materna\:
 
 guiNoErrorsFound = No s'han trobat errors ni avisos (llengua\: {0})
 
-guiNoErrorsFoundSelectedText = No s'han trobat errors ni avisos al text seleccionat (llengua\: {0})
+guiNoErrorsFoundSelectedText = No s'han trobat errors ni avisos en el text seleccionat (llengua\: {0})
 
 guiOKButton = &D'acord
 
@@ -138,40 +162,40 @@ guiOOoOptionsButton = Opcions...
 
 guiProgressWindowTitle = LanguageTool\: Comprovant el text...
 
-# guiRemoveButton=Remove
+guiRemoveButton=Esborra
 guiReplaceWindowTitle = Substitueix el text
 
 guiReplaceWithOtherText = <un altre text>
 
 guiRunOnPort = Executa com a servidor en el po&rt
 
-guiSelectionCheckComplete = La comprovaci\u00f3 del text seleccionat s'ha completat.
+guiSelectionCheckComplete = S'ha completat la comprovaci\u00f3 del text seleccionat.
 
-# guiTagText = &Tag Text
+guiTagText = &Etiqueta el text
 
 incorrect_case = Aquesta frase no comen\u00e7a amb maj\u00fascula
 
-is = Island\u00e8s
+is = island\u00e8s
 
-it = Itali\u00e0
+it = itali\u00e0
 
-# km = Khmer
+km = khmer
 
-lt = Litu\u00e0
+lt = litu\u00e0
 
 missing_space_after_comma = Escriu un espai despr\u00e9s de la coma
 
-ml = Malai\u00e0lam
+ml = malai\u00e0lam
 
-nl = Neerland\u00e8s
+nl = neerland\u00e8s
 
-no_space_after = No poses cap espai despr\u00e9s dels par\u00e8ntesi d'obertura
+no_space_after = No poseu cap espai despr\u00e9s dels par\u00e8ntesis d'obertura
 
-no_space_before = No poses cap espai despr\u00e9s dels par\u00e8ntesi de tancament
+no_space_before = No poseu cap espai despr\u00e9s dels par\u00e8ntesis de tancament
 
-no_space_before_dot = No poses cap espai abans del punt.
+no_space_before_dot = No poseu cap espai abans del punt
 
-pl = Polon\u00e8s
+pl = polon\u00e8s
 
 repetition = Possible error tipogr\u00e0fic\: heu repetit una paraula
 
@@ -179,21 +203,23 @@ result1 = <br>\n<b> {0}. L\u00ednia {1}, columna {2}</b><br>
 
 resultAreaText = Els resultats apareixeran ac\u00ed
 
-resultTime = <br>\r\nTemps\: {0}ms (incloent {1}ms per a la concordan\u00e7a de regles)<br>
+resultTime = <br>Temps\: {0}ms (incloent-hi {1}ms per a la concordan\u00e7a de regles)<br>
 
-ru = Rus
+ru = rus
 
-sk = Eslovac
+sk = eslovac
 
-sl = Eslov\u00e8
+sl = eslov\u00e8
 
-space_after_comma = Posa un espai despr\u00e9s de la coma, per\u00f2 no abans de la coma
+space_after_comma = Poseu un espai despr\u00e9s de la coma, per\u00f2 no abans de la coma
 
-startChecking = La comprovaci\u00f3 comen\u00e7ar\u00e0 en {0}
+spelling = S'ha trobat un possible error ortogr\u00e0fic
 
-sv = Suec
+startChecking = La comprovaci\u00f3 comen\u00e7ar\u00e0 d'ac\u00ed a {0}
 
-# tl = Tagalog
+sv = suec
+
+tl = tag\u00e0log
 
 textLanguage = Llengua del text\:
 
@@ -201,12 +227,26 @@ two_commas = Dues comes consecutives
 
 two_dots = Dos punts consecutius
 
-uk = Ucrain\u00e8s
+uk = ucra\u00efn\u00e8s
 
-unpaired_brackets = Par\u00e8ntesi o s\u00edmbol semblan sense parella
+unpaired_brackets = Par\u00e8ntesi o s\u00edmbol semblant sense parella
+
+useGUIConfig = Utilitzeu els par\u00e0metres de dalt per al servidor
 
 whitespace_repetition = Possible error tipogr\u00e0fic\: heu repetit un espai en blanc
 
-ro = Roman\u00e8s
+ro = roman\u00e8s
 
-# zh = Chinese
+zh = xin\u00e8s
+
+moreInfo = M\u00e9s informaci\u00f3\:
+
+pt = portugu\u00e8s
+
+pt-BR = portugu\u00e8s (Brasil)
+
+pt-PT = portugu\u00e8s (Portugal)
+
+guiWarning = Av\u00eds
+
+guiDuplicate = Fitxer de regles duplicat\!
