--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
@@ -23,7 +23,7 @@ category_typo = Faute de frappe possible
 
 checkDone = V\u00e9rification termin\u00e9e. Nombre d'alertes \: {0}
 
-checkText = V\u00e9rifier le texte
+checkText = &V\u00e9rifier le texte
 
 correctionMessage = Correction \:
 
@@ -33,9 +33,15 @@ da = Danois
 
 de = Allemand
 
+de-DE = Allemand (Allemagne)
+
+de-AT = Allemand (Autrichien)
+
+de-CH = Allemand (Suisse)
+
 desc_comma_whitespace = Espace devant \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb ou apr\u00e8s \u00ab\u00a0(\u00a0\u00bb
 
-desc_double_punct = Virgules ou points cons\u00e9cutifs
+desc_double_punct = Deux virgules ou points cons\u00e9cutifs
 
 desc_repetition = Doublon (\u00ab\u00a0pour pour\u00a0\u00bb, \u00ab\u00a0je je\u00a0\u00bb, etc.)
 
@@ -49,17 +55,35 @@ desc_repetition_beginning_adv = Deux phrases cons\u00e9cutives commencent par le
 
 desc_repetition_beginning_thesaurus = Reformulez la phrase ou utilisez le dictionnaire des synonymes (menu Outils \u2192 Langues). 
 
-desc_unpaired_brackets = Guillemet fermant ou ouvrant manquant
+desc_unpaired_brackets = Guillemet fermant ou ouvrant manquant (ou autre symbole \u00e9quilibr\u00e9)
 
-desc_uppercase_sentence = Majuscule en d\u00e9but de phrase
+desc_uppercase_sentence = Absence de majuscule en d\u00e9but de phrase
 
 desc_whitespacerepetition = Plusieurs espaces blanches (mauvais format)
 
-double_dots_short = Points cons\u00e9cutifs
+desc_spelling = Faute de frappe possible
 
-double_commas_short = Virgules cons\u00e9cutifs
+desc_spelling_short = Faute de frappe
+
+double_dots_short = Deux points cons\u00e9cutifs
+
+double_commas_short = Deux virgules cons\u00e9cutives
+
+el = Grec
 
 en = Anglais
+
+en-AU = Anglais (Australien)
+
+en-GB = Anglais (Britannique)
+
+en-US = Anglais (Am\u00e9ricain)
+
+en-CA = Anglais (Canadien)
+
+en-NZ = Anglais (N\u00e9o-z\u00e9landais)
+
+en-ZA = Anglais (Sud-africain)
 
 enterText = Ins\u00e9rez le texte \u00e0 v\u00e9rifier dans l'espace du haut
 
@@ -94,7 +118,7 @@ guiCloseButton=Fermer
 guiConfigWindowTitle = Options de LanguageTool
 
 guiDemoText = Se texte est un exemple pour pour vous montrer le fonctionnement de LanguageTool. notez que LanguageTool ne comporte pas de correcteur orthographique.
-guiLanguageManagerDialog=Language Module Manager
+guiLanguageManagerDialog=Gestionnaire de module de langue
 
 guiMatchCount = Erreurs possibles \:
 
@@ -120,13 +144,13 @@ guiMenuShowMainWindow = Ouvrir la fen\u00eatre principale
 
 guiMotherTongue = Langue maternelle \:
 
-guiNoErrorsFound = Aucune alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (langue\: {0})
+guiNoErrorsFound = Aucune alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (langue \: {0})
 
-guiNoErrorsFoundSelectedText = Aucune alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (langue\: {0})
+guiNoErrorsFoundSelectedText = Aucune alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (langue \: {0})
 
 guiOKButton = &OK
 
-guiOOoChangeButton = Chan&ger
+guiOOoChangeButton = &Changer
 
 guiOOoCloseButton = Fermer
 
@@ -143,7 +167,7 @@ guiReplaceWindowTitle = Remplacer le texte
 
 guiReplaceWithOtherText = <autre texte>
 
-guiRunOnPort = Ex\u00e9cuter en tant que serveur sur le port
+guiRunOnPort = Ex\u00e9cuter en tant que serveur sur le &port
 
 guiSelectionCheckComplete = La v\u00e9rification de LanguageTool pour le texte s\u00e9lectionn\u00e9 est termin\u00e9e.
 
@@ -159,7 +183,7 @@ km = Khmer
 
 lt = Lituanien
 
-missing_space_after_comma = Cr\u00e9ez une espace apr\u00e8s la virgule
+missing_space_after_comma = Ins\u00e9rez une espace apr\u00e8s la virgule
 
 ml = Malayalam
 
@@ -179,7 +203,7 @@ result1 = <br><b>{0}. Ligne {1}, colonne {2}</b><br>
 
 resultAreaText = Les r\u00e9sultats se trouveront ici.
 
-resultTime = <br>Dur\u00e9e\: {0}ms (y compris {1}ms les v\u00e9rifier les r\u00e8gles)<br>
+resultTime = <br>Dur\u00e9e \: {0} ms (y compris {1} ms les v\u00e9rifier les r\u00e8gles)<br>
 
 ru = Russe
 
@@ -187,7 +211,9 @@ sk = Slovaque
 
 sl = Slov\u00e8ne
 
-space_after_comma = Placer l'espace apr\u00e8s la virgule et non avant
+space_after_comma = Ins\u00e9rez une espace apr\u00e8s la virgule et non avant
+
+spelling = Faute de frappe possible trouv\u00e9e
 
 startChecking = Commencement de la v\u00e9rification en {0}
 
@@ -205,8 +231,22 @@ uk = Ukrainien
 
 unpaired_brackets = Il manque une parenth\u00e8se fermante ou ouvrante, un guillemet fermant ou ouvrant, etc.
 
+useGUIConfig = Utiliser la configuration ci-dessus pour le serveur
+
 whitespace_repetition = Faute de frappe possible \: vous avez r\u00e9p\u00e9t\u00e9 une espace
 
 ro = Roumain
 
 zh = Chinois
+
+moreInfo = Plus d\u2019informations \:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
