--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
@@ -33,6 +33,12 @@ cs = t\u00e9kkneska
 
 de = \u00fe\u00fdska
 
+# de-DE = German (Germany)
+
+# de-AT = German (Austrian)
+
+# de-CH = German (Swiss)
+
 desc_comma_whitespace = Bil \u00e1 undan kommu og \u00e1 undan/eftir sviga
 
 desc_double_punct = Tv\u00edtekinn punktur e\u00f0a komma
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Athuga hvort setning hefst \u00e1 st\u00f3rum staf
 
 desc_whitespacerepetition = Tv\u00f6falt bil (galli \u00e1 uppsetningu)
 
+# desc_spelling = Possible spelling mistake
+
+# desc_spelling_short = Spelling mistake
+
 double_dots_short = Tveir punktar \u00ed r\u00f6\u00f0
 
 double_commas_short = Tv\u00e6r kommur \u00ed r\u00f6\u00f0
 
+# el = Greek
+
 en = enska
+
+# en-AU = English (Australian)
+
+# en-GB = English (British)
+
+# en-US = English (American)
+
+# en-CA = English (Canadian)
+
+# en-NZ = English (New Zealand)
+
+# en-ZA = English (South African)
 
 enterText = Skrifa\u00f0u e\u00f0a l\u00edmdu texta til a\u00f0 lesa yfir \u00ed efsta reitinn
 
@@ -189,6 +213,8 @@ sl = sl\u00f3venska
 
 space_after_comma = Bil skal vera \u00e1 eftir kommu, ekki \u00e1 undan henni
 
+# spelling = Possible spelling mistake found
+
 startChecking = Hef yfirlestur\: {0}
 
 sv = s\u00e6nska
@@ -205,8 +231,22 @@ uk = \u00fakra\u00ednska
 
 unpaired_brackets = Svigar (e\u00f0a svipu\u00f0 t\u00e1kn) standast ekki \u00e1
 
+# useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 
 # ro = Romanian
 
 # zh = Chinese
+
+# moreInfo = More info\:
+
+# pt = Portuguese
+
+# pt-BR = Portuguese (Brazil)
+
+# pt-PT = Portuguese (Portugal) 
+
+# guiWarning = Warning
+
+# guiDuplicate = Duplicate rule file\!
