--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
@@ -33,6 +33,12 @@ da = du\u0144ski
 
 de = niemiecki
 
+de-DE = niemiecki (Niemcy)
+
+de-AT = niemiecki (Austria)
+
+de-CH = niemiecki (Szwajcaria)
+
 desc_comma_whitespace = Odst\u0119py przed przecinkami oraz przed nawiasami i po nawiasach
 
 desc_double_punct = Podw\u00f3jne kropki lub przecinki
@@ -41,13 +47,13 @@ desc_repetition = Powt\u00f3rzenie wyrazu (np. \u201ejest jest\u201d)
 
 desc_repetition_short = Powt\u00f3rzenie wyrazu
 
-# desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = Ten sam wyraz na pocz\u0105tku kilku zda\u0144 z rz\u0119du
 
-# desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Trzy zdania z rz\u0119du zaczynaj\u0105 si\u0119 od tego samego wyrazu.
 
-# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = Dwa zdania z rz\u0119du zaczynaj\u0105 si\u0119 od tego samego przys\u0142\u00f3wka.
 
-# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition_beginning_thesaurus = Przeredaguj zdanie lub skorzystaj ze s\u0142ownika synonim\u00f3w.
 
 desc_unpaired_brackets = Niesparowane nawiasy i cudzys\u0142owy
 
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Test, czy zdanie zaczyna si\u0119 wielk\u0105 liter\u0
 
 desc_whitespacerepetition = Powt\u00f3rzenie spacji (b\u0142\u0119dne formatowanie)
 
+desc_spelling = Prawdopodobny b\u0142\u0105d pisowni
+
+desc_spelling_short = B\u0142\u0119dna pisownia
+
 double_dots_short = Dwie kropki
 
 double_commas_short = Dwa przecinki
 
+el = grecki
+
 en = angielski
+
+en-AU = angielski (Australia)
+
+en-GB = angielski (Wielka Brytania)
+
+en-US = angielski (USA)
+
+en-CA = angielski (Kanada)
+
+en-NZ = angielski (Nowa Zelandia)
+
+en-ZA = angielski (RPA)
 
 enterText = Wpisz lub wklej tekst do sprawdzenia w g\u00f3rnym polu
 
@@ -93,7 +117,7 @@ guiCloseButton=Zamknij
 
 guiConfigWindowTitle = Opcje LanguageTool
 
-guiDemoText = To jest przyk\u0142adowy tekst kt\u00f3ry pokazuje, jak jak dzia\u0142a LanguageTool. LanguageTool nie zawiera jadnak korektora psowni.
+guiDemoText = To jest przyk\u0142adowy tekst kt\u00f3ry pokazuje, jak jak dzia\u0142a LanguageTool. LanguageTool zawiera jusz korektor psowni.
 guiLanguageManagerDialog=Mened\u017cer modu\u0142\u00f3w j\u0119zykowych
 
 guiMatchCount = Potencjalne b\u0142\u0119dy\:
@@ -189,6 +213,8 @@ sl = s\u0142owe\u0144ski
 
 space_after_comma = Spacj\u0119 wstawiamy po przecinku, nie przed przecinkiem
 
+spelling = Wykryto prawdopodobny b\u0142\u0105d pisowni
+
 startChecking = Sprawdzanie w j\u0119zyku\: {0}
 
 sv = szwedzki
@@ -205,8 +231,22 @@ uk = ukrai\u0144ski
 
 unpaired_brackets = Niesparowany cudzys\u0142\u00f3w, nawias itd.
 
+useGUIConfig = U\u017cyj powy\u017cszych ustawie\u0144 w serwerze
+
 whitespace_repetition = Prawdopodobna liter\u00f3wka\: wiele spacji z rz\u0119du
 
 ro = rumu\u0144ski
 
 zh = chi\u0144ski
+
+moreInfo = Wi\u0119cej informacji\:
+
+pt = portugalski
+
+pt-BR = portugalski (Brazylia)
+
+pt-PT = portugalski (Portugalia)
+
+guiWarning = Ostrze\u017cenie
+
+guiDuplicate = Wybrany plik regu\u0142 jest ju\u017c za\u0142adowany. Wybierz inny plik regu\u0142.
