--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sl.properties
@@ -33,6 +33,12 @@ da = danski
 
 de = nem\u0161ki
 
+de-DE = nem\u0161ki (Nem\u010dija)
+
+de-AT = nem\u0161ki (Avstrija)
+
+de-CH = nem\u0161ki (\u0160vica)
+
 desc_comma_whitespace = Uporaba presledka, tabulatorja ali preloma vrstice pred vejico in pred/po oklepaju
 
 desc_double_punct = Uporaba dveh zaporednih pik ali vejic
@@ -55,11 +61,29 @@ desc_uppercase_sentence = Preveri, da se poved za\u010dne z veliko za\u010detnic
 
 desc_whitespacerepetition = Ponovljen presledek (nepravilno oblikovanje)
 
+desc_spelling = Morebitna napaka pri \u010drkovanju
+
+desc_spelling_short = Napaka pri \u010drkovanju
+
 double_dots_short = Zaporedni piki
 
 double_commas_short = Zaporedni vejici
 
+el = gr\u0161ki
+
 en = angle\u0161ki
+
+en-AU = angle\u0161ki (Avstralija)
+
+en-GB = britanska angle\u0161\u010dina
+
+en-US = ameri\u0161ka angle\u0161\u010dina
+
+en-CA = angle\u0161ki (Kanada)
+
+en-NZ = angle\u0161ki (Nova Zelandija)
+
+en-ZA = angle\u0161ki (Ju\u017ena Afrika)
 
 enterText = V zgornje obmo\u010dje vnesite ali prilepite besedilo za preverjanje
 
@@ -189,6 +213,8 @@ sl = slovenski
 
 space_after_comma = Presledek vstavi po vejici, ne pa pred vejico
 
+spelling = Najdena morebitna napaka pri \u010drkovanju
+
 startChecking = Za\u010detek preverjanja v {0}
 
 sv = \u0161vedski
@@ -205,8 +231,22 @@ uk = ukrajinski
 
 unpaired_brackets = Neparni oklepaji ali podobni znaki
 
+useGUIConfig = Gornje nastavitve uporabi za stre\u017enik
+
 whitespace_repetition = Mo\u017ena tipkarska napaka\: ponovili ste presledek
 
 ro = romunski
 
 zh = kitajski
+
+moreInfo = Ve\u010d podatkov\:
+
+pt = portugalski
+
+pt-BR = portugalski (Brazilija)
+
+pt-PT = portugalski (Portugalska)
+
+guiWarning = Opozorilo
+
+guiDuplicate = Podvojena datoteka s pravili\!
